fixing margin for overlay/collapse

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -49,7 +49,7 @@
     
     .overlay {
         padding: 0 20px;
-        margin-top: 120px;
+        margin-top: clamp(35px, calc(1.5vw + 1vh), 40px);
         text-align: center;
     }
 
